--- a/app/src/main/res/layout/list_item_media_small.xml
+++ b/app/src/main/res/layout/list_item_media_small.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-<data>
-    <variable
-        name="tv"
-        type="com.example.cinemates.model.TvShow" />
-</data>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="media"
+            type="com.example.cinemates.model.Media" />
+    </data>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,9 +30,9 @@
 
 
                 <include
-                    layout="@layout/layout_movie_poster"
-                    app:path="@{tv.posterPath}"
-                    app:vote="@{tv.voteAverage}"/>
+                    layout="@layout/layout_media_poster"
+                    app:path="@{media.posterPath}"
+                    app:vote="@{media.voteAverage}" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -38,13 +41,13 @@
 
                     <TextView
                         android:id="@+id/textTitle"
-                        android:text="@{tv.name}"
                         style="@style/item_title_style"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:lines="2"
-                        tools:text="Tv Show Title" />
+                        android:text="@{media.title}"
+                        tools:text="Media Title" />
 
                 </LinearLayout>
 
