--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,7 +7,7 @@
 
     <item
         android:id="@+id/discoverFragment"
-        android:icon="@drawable/ic_outline_search_24"
+        android:icon="@drawable/ic_discover"
         android:title="Discover" />
     <item
         android:id="@+id/savedFragment"
