--- a/app/src/main/res/layout/fragment_listing_items.xml
+++ b/app/src/main/res/layout/fragment_listing_items.xml
@@ -30,7 +30,7 @@
                 android:textStyle="bold"
                 tools:text='@tools:sample/us_zipcodes' />
 
-            <com.example.cinemates.util.RecyclerViewEmptySupport
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
