--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,7 +22,7 @@
             android:textSize="32sp"
             android:textStyle="bold" />
 
-        <com.example.cinemates.util.RecyclerViewEmptySupport
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
