--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -80,13 +80,15 @@
             android:text="TV Show" />
     </com.google.android.material.chip.ChipGroup>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <com.indisparte.recyclerviewemptystatesupport.RecyclerViewEmptyStateSupport
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:emptyText="Nothing here!"
+        app:emptyTextColor="@color/alabaster"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/list_item_movie_long"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chip_group" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
