--- a/app/src/main/res/layout/fragment_tv_about.xml
+++ b/app/src/main/res/layout/fragment_tv_about.xml
@@ -100,7 +100,7 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <com.example.cinemates.util.RecyclerViewEmptySupport
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/trailers"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
