--- a/app/src/main/res/layout/list_item_section.xml
+++ b/app/src/main/res/layout/list_item_section.xml
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/linearLayoutCompat">
 
-            <com.example.cinemates.util.RecyclerViewEmptySupport
+            <com.indisparte.recyclerviewemptystatesupport.RecyclerViewEmptyState
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
