--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -85,6 +85,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:emptyText="Nothing here!"
+        app:icon="@drawable/ic_space"
         app:emptyTextColor="@color/alabaster"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
