fix home search icon

--- a/app/src/main/res/layout/list_item_section.xml
+++ b/app/src/main/res/layout/list_item_section.xml
@@ -48,13 +48,13 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/linearLayoutCompat">
 
-            <com.indisparte.recyclerviewemptystatesupport.RecyclerViewEmptyState
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/list_item_movie_small" />
+                tools:listitem="@layout/list_item_media_small" />
 
             <include
                 android:id="@+id/empty_view"
