--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -119,4 +119,16 @@
     <style name="CardViewCustom" parent="Widget.MaterialComponents.CardView">
         <item name="background">@drawable/gradient_filter_bg</item>
     </style>
+
+
+    <style name="CustomFilterChipStyle" parent="Widget.MaterialComponents.Chip.Filter">
+        <item name="chipBackgroundColor">@color/background_color_chip_state_list</item>
+        <item name="chipStrokeColor">@color/royal_blue_100</item>
+        <item name="chipStrokeWidth">2dp</item>
+        <item name="chipIconTint">@color/alabaster</item>
+        <item name="chipCornerRadius">10dp</item>
+        <item name="android:textColor">@color/alabaster</item>
+    </style>
+    
+    
 </resources>
