--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,10 +13,15 @@
     <!-- Other colors-->
     <color name="blue_stone_100">#026258</color>
     <color name="vermilion_100">#D84315</color>
+    <color name="vermilion_74">#BDD84315</color>
     <color name="alabaster">#FAFAFA</color>
     <color name="geyser">#CFD8DC</color>
     <color name="royal_blue_100">#3A55EA</color>
+    <color name="royal_blue_70">#B33A55EA</color>
     <color name="fern_frond_100">#487B1E</color>
+    <color name="fern_frond_70">#B3487B1E</color>
     <!---->
+
+
 
 </resources>
