--- a/app/src/main/res/layout/list_item_media_long.xml
+++ b/app/src/main/res/layout/list_item_media_long.xml
@@ -62,7 +62,7 @@
                     android:textColor="@color/alabaster"
                     android:textSize="24sp"
                     android:textStyle="bold"
-                    android:text="@{media.title}"
+                    android:text="@{media.displayTitle}"
                     tools:text="Media Title" />
 
                 <TextView
