--- a/app/src/main/res/layout/list_item_media_small.xml
+++ b/app/src/main/res/layout/list_item_media_small.xml
@@ -46,7 +46,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:lines="2"
-                        android:text="@{media.title}"
+                        android:text="@{media.displayTitle}"
                         tools:text="Media Title" />
 
                 </LinearLayout>
