--- a/app/src/main/res/layout/list_item_backdrop.xml
+++ b/app/src/main/res/layout/list_item_backdrop.xml
@@ -19,7 +19,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="250dp"
         android:layout_height="150dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         app:cardCornerRadius="10dp">
 
         <RelativeLayout
