--- a/app/src/main/res/layout/fragment_movie_about.xml
+++ b/app/src/main/res/layout/fragment_movie_about.xml
@@ -9,14 +9,6 @@
             name="movie"
             type="com.example.cinemates.model.Movie" />
 
-        <variable
-            name="poster_counter"
-            type="Integer" />
-
-        <variable
-            name="backdrop_counter"
-            type="Integer" />
-
         <import type="android.view.View" />
     </data>
 
@@ -63,7 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textTitleGenres"
-                android:padding="10dp"/>
+                android:padding="10dp" />
 
             <TextView
                 android:id="@+id/textTitleInfo"
@@ -110,9 +102,9 @@
                 layout="@layout/layout_collection_content"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
+                android:layout_centerInParent="true"
                 android:visibility="gone"
-                app:collection="@{movie.belongsToCollection}"
-                android:layout_centerInParent="true" />
+                app:collection="@{movie.belongsToCollection}" />
 
             <TextView
                 android:id="@+id/trailer_title"
@@ -146,27 +138,6 @@
                 android:textColor="@color/alabaster"
                 android:textSize="18sp"
                 android:textStyle="bold" />
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/media_title"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
-
-                <include
-                    android:id="@+id/posters_shower"
-                    layout="@layout/list_item_poster"
-                    app:counter="@{poster_counter}"
-                    app:path="@{movie.posterPath}" />
-
-                <include
-                    android:id="@+id/backdrops_shower"
-                    layout="@layout/list_item_backdrop"
-                    app:counter="@{backdrop_counter}"
-                    app:path="@{movie.backdropPath}" />
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
 
 
         </RelativeLayout>
