--- a/app/src/main/res/layout/fragment_movie_about.xml
+++ b/app/src/main/res/layout/fragment_movie_about.xml
@@ -19,8 +19,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".ui.ui.details.movie.MovieInfoFragment">
+            android:layout_height="match_parent">
 
 
             <com.borjabravo.readmoretextview.ReadMoreTextView
@@ -126,19 +125,6 @@
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/list_item_yt_video" />
-
-            <TextView
-                android:id="@+id/media_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/trailers"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:text="Media"
-                android:textColor="@color/alabaster"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
 
         </RelativeLayout>
 
