--- a/app/src/main/res/layout/fragment_tv_about.xml
+++ b/app/src/main/res/layout/fragment_tv_about.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="tv"
-            type="com.example.cinemates.model.TvShow" />
+            type="com.example.cinemates.domain.model.TvShow" />
 
         <variable
             name="poster_counter"
