--- a/app/src/main/res/layout/list_item_crew_small.xml
+++ b/app/src/main/res/layout/list_item_crew_small.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="crew"
-            type="com.example.cinemates.model.Crew" />
+            type="com.example.cinemates.domain.model.Crew" />
     </data>
 
     <RelativeLayout
