--- a/app/src/main/res/layout/list_item_episode_group.xml
+++ b/app/src/main/res/layout/list_item_episode_group.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="episodeGroup"
-            type="com.example.cinemates.model.EpisodeGroup" />
+            type="com.example.cinemates.domain.model.EpisodeGroup" />
         <variable
             name="view"
             type="android.view.View" />
