--- a/app/src/main/res/layout/list_item_person_long.xml
+++ b/app/src/main/res/layout/list_item_person_long.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="actor"
-            type="com.example.cinemates.model.Cast" />
+            type="com.example.cinemates.domain.model.Cast" />
     </data>
 
 
