--- a/app/src/main/res/layout/list_item_section.xml
+++ b/app/src/main/res/layout/list_item_section.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="section"
-            type="com.example.cinemates.model.section.Section" />
+            type="com.example.cinemates.domain.model.section.Section" />
     </data>
 
     <RelativeLayout
