--- a/app/src/main/res/layout/list_item_yt_video.xml
+++ b/app/src/main/res/layout/list_item_yt_video.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="video"
-            type="com.example.cinemates.model.Video" />
+            type="com.example.cinemates.domain.model.Video" />
     </data>
 
     <RelativeLayout
