--- a/app/src/main/res/layout/fragment_episode_group_details.xml
+++ b/app/src/main/res/layout/fragment_episode_group_details.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="episodeGroup"
-            type="com.example.cinemates.model.EpisodeGroup" />
+            type="com.example.cinemates.domain.model.EpisodeGroup" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
