--- a/app/src/main/res/layout/fragment_filterable.xml
+++ b/app/src/main/res/layout/fragment_filterable.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="filter"
-            type="com.example.cinemates.model.Filter" />
+            type="com.example.cinemates.domain.model.Filter" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
