--- a/app/src/main/res/layout/fragment_manage_bottomsheet.xml
+++ b/app/src/main/res/layout/fragment_manage_bottomsheet.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="movie"
-            type="com.example.cinemates.model.Movie" />
+            type="com.example.cinemates.domain.model.Movie" />
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
