--- a/app/src/main/res/layout/layout_collection_content.xml
+++ b/app/src/main/res/layout/layout_collection_content.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="collection"
-            type="com.example.cinemates.model.Collection" />
+            type="com.example.cinemates.domain.model.Collection" />
 
         <import type="android.view.View" />
     </data>
@@ -46,7 +46,7 @@
                 android:layout_centerInParent="true"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/list_item_movie_small" />
+                tools:listitem="@layout/list_item_media_small" />
 
 
         </RelativeLayout>
