--- a/app/src/main/res/layout/layout_collection_cover.xml
+++ b/app/src/main/res/layout/layout_collection_cover.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="collection"
-            type="com.example.cinemates.model.Collection" />
+            type="com.example.cinemates.domain.model.Collection" />
 
         <import type="android.view.View" />
     </data>
