--- a/app/src/main/res/layout/list_item_crew_long.xml
+++ b/app/src/main/res/layout/list_item_crew_long.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="crew"
-            type="com.example.cinemates.model.Crew" />
+            type="com.example.cinemates.domain.model.Crew" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
