--- a/app/src/main/res/layout/list_item_filter.xml
+++ b/app/src/main/res/layout/list_item_filter.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="filter"
-            type="com.example.cinemates.model.Filter" />
+            type="com.example.cinemates.domain.model.Filter" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
