--- a/app/src/main/res/layout/list_item_section_collassable.xml
+++ b/app/src/main/res/layout/list_item_section_collassable.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="section"
-            type="com.example.cinemates.model.section.Section" />
+            type="com.example.cinemates.domain.model.section.Section" />
     </data>
 
     <LinearLayout
