Update code with use cases

--- a/app/src/main/res/layout/fragment_actor_details.xml
+++ b/app/src/main/res/layout/fragment_actor_details.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="person"
-            type="com.example.cinemates.domain.model.PersonDetails" />
+            type="com.example.cinemates.domain.model.Person" />
 
         <import type="android.view.View" />
     </data>
